--- a/dropdown-test/src/app/app.component.html
+++ b/dropdown-test/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to {{ title }}!!
   </h1>
   <angular2-multiselect [data]="dropdownList" [(ngModel)]="selectedItems"
                         [settings]="dropdownSettings"
